--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -27,12 +27,12 @@ p {
   margin: 1.875rem 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica', 'Helvetica', Helvetica, Arial, sans-serif;
   font-weight: 800;
   line-height: 1.1;
 }
 h1 {
-  font-size: 2.25rem;
+  font-size: 2.rem;
 }
 h2 {
   font-size: 1.875rem;
